--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "antd": "^5.24.3",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "lucide-preact": "^0.479.0",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
