--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
